--- a/app/src/main/res/layout/activity_review_musician.xml
+++ b/app/src/main/res/layout/activity_review_musician.xml
@@ -69,18 +69,48 @@
         android:padding="10dp"
         android:background="@drawable/border_orange">
         <com.github.siyamed.shapeimageview.CircularImageView
+            android:layout_gravity="center"
             android:id="@+id/img_user_reviewer_reviewmusician"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/default_user"/>
-        <TextView
-            android:id="@+id/tv_pesan_review_reviewmusician"
+        <LinearLayout
             android:layout_gravity="center"
-            android:textSize="11pt"
-            android:text="message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"/>
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_nama_reviewer_reviewmusician"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/primaryDark"
+                android:text="username"
+                android:textSize="11pt"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_pesan_review_reviewmusician"
+                android:layout_gravity="left"
+                android:textSize="9pt"
+                android:text="message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"/>
+
+            <View
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_width="fill_parent"
+                android:layout_height="0.5dp"
+                android:background="#c0c0c0"/>
+            <TextView
+                android:id="@+id/tv_tanggal_review_reviewmusician"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="date"
+                android:layout_marginLeft="10dp" />
+        </LinearLayout>
     </LinearLayout>
 
     <!--<TextView-->
