--- a/app/src/main/res/layout/activity_login_as.xml
+++ b/app/src/main/res/layout/activity_login_as.xml
@@ -45,5 +45,32 @@
             android:textAllCaps="true"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/login_as_musician"/>
+
+        <!--<LinearLayout-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
+
+            <!--<TextView-->
+                <!--android:layout_gravity="right"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Don't have an account?"-->
+                <!--android:textSize="20sp"-->
+                <!--android:textColor="#ffffff"/>-->
+            <!--<TextView-->
+                <!--android:layout_marginLeft="5dp"-->
+                <!--android:id="@+id/tv_register_loginactivity"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/register"-->
+                <!--android:textSize="20sp"-->
+                <!--android:textStyle="bold"-->
+                <!--android:textAllCaps="true"-->
+                <!--android:textAlignment="center"-->
+                <!--android:textColor="#ffffff" />-->
+        <!--</LinearLayout>-->
     </LinearLayout>
 </LinearLayout>
