--- a/app/src/main/res/layout/activity_login_as_organizer.xml
+++ b/app/src/main/res/layout/activity_login_as_organizer.xml
@@ -81,4 +81,31 @@
             android:text="@string/login"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dont_have_an_account"
+            android:textSize="20sp"
+            android:textColor="#ffffff"/>
+        <TextView
+            android:layout_marginLeft="5dp"
+            android:id="@+id/tv_register_login_org"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/register"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textAlignment="center"
+            android:textColor="#ffffff" />
+    </LinearLayout>
+
 </LinearLayout>
