--- a/app/src/main/res/layout/activity_register_as_musician.xml
+++ b/app/src/main/res/layout/activity_register_as_musician.xml
@@ -121,4 +121,31 @@
             android:text="@string/register"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/already_have"
+            android:textSize="20sp"
+            android:textColor="#ffffff"/>
+        <TextView
+            android:layout_marginLeft="5dp"
+            android:id="@+id/tv_login_register_msc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textAlignment="center"
+            android:textColor="#ffffff" />
+    </LinearLayout>
+
 </LinearLayout>
