--- a/app/src/main/res/layout/activity_konfirmasi_pembayaran.xml
+++ b/app/src/main/res/layout/activity_konfirmasi_pembayaran.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -112,6 +116,27 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/img_photo_payment_bill_konfirmasipembayaran"
+            android:src="@android:drawable/ic_menu_gallery"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+        <Button
+            android:id="@+id/btn_upload_payment_bill_photo_konfirmasipembayaran"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="upload payment bill"
+            android:textColor="@color/colorAccent"
+            android:background="@drawable/button_border_white"
+            android:elevation="4dp"/>
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_marginTop="20dp"
@@ -120,17 +145,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="cancel"/>
+        <!--<Button-->
+            <!--android:id="@+id/btn_cancel_konfirmasipembayaran"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="cancel"/>-->
 
         <Button
             android:id="@+id/btn_ok_konfirmasipembayaran"
             android:layout_gravity="right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ok"/>
+            android:text="@string/send"
+            android:textColor="@color/colorAccent1"
+            android:background="@drawable/button_border_white"/>
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
