--- a/app/src/main/res/layout/activity_musician.xml
+++ b/app/src/main/res/layout/activity_musician.xml
@@ -30,6 +30,47 @@
                 android:fitsSystemWindows="true"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                 app:layout_collapseMode="parallax"/>
+            <LinearLayout
+                android:layout_gravity="bottom"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:background="@drawable/transparent_dark">
+                <LinearLayout
+                    android:layout_gravity="start|left|bottom"
+                    android:gravity="start|left|bottom"
+                    android:orientation="vertical"
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp">
+                    <TextView
+                        android:id="@+id/tv_harga_musicianactivity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Harga"/>
+                    <TextView
+                        android:id="@+id/tv_kota_musicianactivity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="kota"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_gravity="right|bottom|end"
+                    android:gravity="right"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_gravity="end|right|bottom"
+                        android:id="@+id/tv_total_gigs_musicianactivity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="gigs"/>
+                </LinearLayout>
+            </LinearLayout>
 
         </android.support.design.widget.CollapsingToolbarLayout>
         <android.support.v7.widget.Toolbar
