fix show musicians for add musician to group, and fix review fragment to show reviewers

--- a/app/src/main/res/layout/activity_add_position_musician.xml
+++ b/app/src/main/res/layout/activity_add_position_musician.xml
@@ -83,18 +83,19 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <!--<Button-->
+            <!--android:id="@+id/btn_cancel_addpositionmusician"-->
+            <!--android:background="@drawable/button_border_white"-->
+            <!--android:text="Cancel"-->
+            <!--android:textColor="#ffffff"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
         <Button
-            android:id="@+id/btn_cancel_addpositionmusician"
-            android:background="@drawable/button_border_white"
-            android:text="Cancel"
-            android:textColor="#ffffff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
+            android:layout_marginTop="20dp"
             android:id="@+id/btn_add_position_addpositionmusician"
             android:background="@drawable/button_border_black"
             android:text="Add"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
