--- a/app/src/main/res/layout/activity_view_map_gig.xml
+++ b/app/src/main/res/layout/activity_view_map_gig.xml
@@ -15,12 +15,12 @@
             android:name="com.google.android.gms.maps.MapFragment"
             android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="match_parent"
             map:cameraZoom="15"/>
 
-        <TextView
-            android:id="@+id/jarak_viewmapgig"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+            <!--android:id="@+id/jarak_viewmapgig"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
 </LinearLayout>
