--- a/app/src/main/res/layout/fragment_musician_review.xml
+++ b/app/src/main/res/layout/fragment_musician_review.xml
@@ -4,23 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerVertical="true"
-    android:fillViewport="false">
+    android:fillViewport="true">
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <ListView
-            android:id="@+id/lv_review_musicianfragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ListView>
 
         <LinearLayout
             android:id="@+id/ll_no_review_musicianreview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:gravity="center">
             <TextView
                 android:layout_gravity="center"
@@ -29,6 +25,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
+
+        <ListView
+            android:id="@+id/lv_review_musicianfragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical">
+        </ListView>
+
+
     </LinearLayout>
 
 
