--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -31,15 +31,15 @@
         android:textColor="@color/colorAccent"
         android:text="@string/gig_money"/>
 
-    <Button
-        android:id="@+id/btn_manager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/button_border_white"
-        android:textColor="@color/colorAccent"
-        android:text="@string/manager"/>
+    <!--<Button-->
+        <!--android:id="@+id/btn_manager"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:background="@drawable/button_border_white"-->
+        <!--android:textColor="@color/colorAccent"-->
+        <!--android:text="@string/manager"/>-->
 
     <Button
         android:id="@+id/btn_about_us"
