--- a/app/src/main/res/layout/lv_review_musician.xml
+++ b/app/src/main/res/layout/lv_review_musician.xml
@@ -36,14 +36,14 @@
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/primaryDark"
                 android:text="username"
-                android:textSize="11pt"
+                android:textSize="23dp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/tv_pesan_review_lvreviewmusician"
                 android:layout_gravity="left"
-                android:textSize="9pt"
+                android:textSize="20dp"
                 android:text="message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
